apps/shiptech/src/styles.scss
/* You can add global styles to this file, and also import other style files */

@import '../../../assets/theme/theme-blue';

@import '../../../assets/layout/css/layout-shiptech';

@import '../../../assets/sass/layout/bootstrap-loading';

@import '~@angular/material/prebuilt-themes/indigo-pink.css';
@import '~@angular/material/prebuilt-themes/indigo-pink.css';
@import "~@ag-grid-community/all-modules/dist/styles/ag-grid.css";
@import "~@ag-grid-community/all-modules/dist/styles/ag-theme-balham.css";

@import '~@angular/material/prebuilt-themes/indigo-pink.css';

.toastr-copy-input {
    color: white !important;
    border: none !important;   
    font-size: 13px !important; 
}

.mat-menu-panel.delivery-mat-menu-panel {
    background: #364150 !important;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25) !important;
    border-radius: 3px !important;

    .mat-menu-item  {
        padding-left: 5px !important;
        padding-right: 30px !important;
    }
}

::-webkit-scrollbar {
    width: 4px;
    height: 4px;
    background-color: transparent;
}
  
ag-grid-angular {
    ::-webkit-scrollbar {
      width: 10px;
      height: 10px;
    }
}

